--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div>Тесты по js</div>
     <script src="./script.js"></script>
   </body>
 </html>
